@@ -70,7 +70,7 @@ int TestCopyDicom(int , char* [])
       TagDocEntryHT & Ht = original->GetHeader()->GetEntry();
 
       size_t dataSize = original->GetImageDataSize();
-      void *imageData = original->GetImageData();
+      uint8_t* imageData = original->GetImageData();
 
       //First of all copy the header field by field
   
